--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "bluebird": "^3.7.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "helmet": "^3.22.0",
     "http-errors": "^1.7.3",
     "imagemagick": "^0.1.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
     "morgan": "~1.9.1",
     "nconf": "^0.10.0",
     "nodemailer": "^6.4.8",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-jwt-strategy": "^1.1.6",
+    "passport-local": "^1.0.0",
     "redis": "^3.0.2",
     "uuid": "^8.0.0"
   },
