--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "base64-img": "^1.0.4",
@@ -13,6 +14,8 @@
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-jwt": "^5.3.3",
+    "express-session": "^1.17.1",
     "helmet": "^3.22.0",
     "http-errors": "^1.7.3",
     "imagemagick": "^0.1.3",
@@ -21,6 +24,7 @@
     "morgan": "~1.9.1",
     "nconf": "^0.10.0",
     "nodemailer": "^6.4.8",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-jwt-strategy": "^1.1.6",
