--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.1",
     "helmet": "^3.22.0",
     "http-errors": "^1.7.3",
+    "im-resize": "^2.3.2",
     "imagemagick": "^0.1.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
