--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "redis": "^3.0.2",
+    "redis-cli": "^1.4.0",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
