--- a/package.json
+++ b/package.json
@@ -14,18 +14,15 @@
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "express-session": "^1.17.1",
     "helmet": "^3.22.0",
     "http-errors": "^1.7.3",
-    "im-resize": "^2.3.2",
     "imagemagick": "^0.1.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
     "morgan": "~1.9.1",
     "nconf": "^0.10.0",
     "nodemailer": "^6.4.8",
     "nodemon": "^2.0.4",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
     "redis": "^3.0.2",
     "redis-cli": "^1.4.0",
     "uuid": "^8.0.0"
